Creating new style

--- a/androidproject.html
+++ b/androidproject.html
@@ -14,10 +14,12 @@
         <p>Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único lugar</p>
     </header>
     <nav>
-        <a href="#">Home</a>
-        <a href="#">Noticias</a>
-        <a href="#">Curiosidade</a>
-        <a href="#">Fale conosco</a>
+        <ul>
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#">Noticias</a></li>
+            <li><a href="#">Curiosidade</a></li>
+            <li><a href="#">About</a></li>
+        </ul>
     </nav>
     <main>
         <article>
