--- a/androidproject.html
+++ b/androidproject.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Curiosidade de Tecnológia</h1>
+        <h1>Curiosidade de Tecnologia</h1>
         <p>Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único lugar</p>
     </header>
     <nav>
