--- a/androidproject.html
+++ b/androidproject.html
@@ -17,7 +17,7 @@
         <ul>
             <li class="active"><a href="#">Home</a></li>
             <li><a href="#">Noticias</a></li>
-            <li><a href="#">Curiosidade</a></li>
+            <li><a href="https://zonacuriosa.com/quem-criou-o-robo-mascote-do-android/" target="_blank" rel="external">Curiosidade</a></li>
             <li><a href="#">About</a></li>
         </ul>
     </nav>
