--- a/androidproject.html
+++ b/androidproject.html
@@ -16,8 +16,8 @@
     <nav>
         <ul>
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">Noticias</a></li>
-            <li><a href="https://zonacuriosa.com/quem-criou-o-robo-mascote-do-android/" target="_blank" rel="external">Curiosidade</a></li>
+            <li><a href="#">News</a></li>
+            <li><a href="https://zonacuriosa.com/quem-criou-o-robo-mascote-do-android/" target="_blank" rel="external">More</a></li>
             <li><a href="#">About</a></li>
         </ul>
     </nav>
