--- a/androidproject.html
+++ b/androidproject.html
@@ -7,6 +7,7 @@
     <title>O surgimento do Android</title>
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style/styleandroid.css">
+    <meta name="descrition" content="Essa pagina fala sobre android">
 </head>
 <body>
     <header>
