--- a/androidproject.html
+++ b/androidproject.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>O surgimento do Android</title>
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="assets/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/bootstrap.bundle.min.js">
     <link rel="stylesheet" href="style/styleandroid.css">
     <meta name="descrition" content="Essa pagina fala sobre android">
 </head>
@@ -89,5 +91,6 @@
         </article>
     </main>
     <footer><p>Desenvolvido por <a href="https://github.com/santosraimundo" target="_blank" rel="external">Santos Raimundo</a>&copy;</p></footer>
+    <script src="assets/bootstrap.bundle.min.js"></script>
 </body>
 </html>
