--- a/androidproject.html
+++ b/androidproject.html
@@ -90,7 +90,7 @@
             <p>Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android e seu simpático mascote.</p>
         </article>
     </main>
-    <footer><p>Desenvolvido por <a href="https://github.com/santosraimundo" target="_blank" rel="external">Santos Raimundo</a>&copy;</p></footer>
+    <footer><p>Developed by <a href="https://github.com/santosraimundo" target="_blank" rel="external">Santos Raimundo</a>&copy;</p></footer>
     <script src="assets/bootstrap.bundle.min.js"></script>
 </body>
 </html>
