--- a/androidproject.html
+++ b/androidproject.html
@@ -18,8 +18,8 @@
     </header>
     <nav>
         <ul>
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">News</a></li>
+            <li class="active"><a href="androidproject.html" target="_self" rel="next">Home</a></li>
+            <li><a href="https://www.android.com/intl/pt_br/new-features-on-android/" target="_blank" rel="external">News</a></li>
             <li><a href="https://zonacuriosa.com/quem-criou-o-robo-mascote-do-android/" target="_blank" rel="external">More</a></li>
             <li><a href="#">About</a></li>
         </ul>
